[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
ivm = { git = "https://github.com/VineLang/vine.git" }
ivy = { git = "https://github.com/VineLang/vine.git" }
vine = { git = "https://github.com/VineLang/vine.git" }
vine-lsp = { git = "https://github.com/VineLang/vine.git" }
vine-util = { git = "https://github.com/VineLang/vine.git" }

bytes = "1.11.1"
console_error_panic_hook = "0.1.7"
include_dir = "0.7.4"
js-sys = "0.3.91"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tokio = { version = "1.41.1", default-features = false, features = ["io-util", "sync"] }
tokio-stream = { version = "0.1.18", default-features = false, features = ["io-util"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = { version = "0.1.44", features = ["release_max_level_warn"] }
tracing-subscriber = "0.3.22"
url = "2.5.3"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = ["console"] }

[lib]
crate-type = ["cdylib"]
