[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
wasm-bindgen = "0.2.114"
web-sys = { version = "0.3.91", features = ["console"] }

ivm = { git = "https://github.com/VineLang/vine.git", branch = "enricozb/playground" }
ivy = { git = "https://github.com/VineLang/vine.git", branch = "enricozb/playground" }
js-sys = "0.3.91"
vine = { git = "https://github.com/VineLang/vine.git", branch = "enricozb/playground" }
vine-util = { git = "https://github.com/VineLang/vine.git", branch = "enricozb/playground" }

[lib]
crate-type = ["cdylib"]
